--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ h1 {
   background-color: #8998a3;
   border-radius: 1rem;
   padding: 2px 10px;
+  color: white;
 }
 
 .compat-sign {
@@ -150,17 +151,45 @@ p {
   /* background-repeat: */
 }
 
-.signs-bg123 {
-  background-image: url("/images/signsbg.png");
-  background-size: contain;
-}
-
-.q-bg123 {
-  background-image: url("/images/questionmarks.png");
-  background-size: contain;
-}
-
 .padding-top-300 {
   padding-top: 300px;
   padding-bottom: 600px;
+}
+
+.sign-button {
+  font-size: 17px;
+  color: white;
+  font-family: "Zilla Slab Highlight", cursive;
+  font-weight: bold;
+  width: 120px;
+  height: auto;
+  background-color: rgb(136, 151, 163, 0.5);
+  text-decoration: none;
+  margin: 5px;
+  padding: 5px;
+  border-radius: 5px;
+
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #8897a3;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #95a8b9;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #efc2bb;
+  --bs-btn-active-border-color: rgb(136, 151, 163, 0.7);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
+.change-btn {
+  border-style: none;
+
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #8897a3;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #95a8b9;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #efc2bb;
+  --bs-btn-active-border-color: rgb(136, 151, 163, 0.7);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
