--- a/css/styles.css
+++ b/css/styles.css
@@ -194,3 +194,41 @@ p {
   --bs-btn-active-border-color: rgb(136, 151, 163, 0.7);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
+
+.chart-design {
+  background-color: rgb(136, 151, 163, 0.7);
+  border-color: #926a85;
+  border-style: solid;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+td,
+th {
+  text-align: left;
+  font-weight: 400;
+  color: white;
+  font-size: 16px;
+  justify-content: baseline;
+}
+
+.table-headers {
+  font-weight: 700;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+.dropdown {
+  content: none;
+}
+
+tbody > tr > th {
+  font-size: 14px;
+}
+
+.data-table-title {
+  justify-content: space-evenly;
+  align-items: flex-end;
+}
