--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,7 @@ p {
   border-style: solid;
   border-radius: 5px;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 td,
@@ -231,4 +232,44 @@ tbody > tr > th {
 .data-table-title {
   justify-content: space-evenly;
   align-items: flex-end;
+}
+
+div > .data-colors {
+  width: 40px;
+  height: 40px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 4px;
+  display: flex;
+}
+
+.data-colors-container {
+  width: 200px;
+}
+
+h2 {
+  background-color: #b790a3;
+  display: inline;
+  font-family: Rubik, sans-serif;
+  border-radius: 5px;
+  margin-left: 12px;
+  font-size: 24px;
+  justify-content: center;
+}
+
+.color-tooltip {
+  display: none;
+  background: #6a4c60;
+  margin-left: -50px;
+  margin-top: 30px;
+  padding: 10px;
+  position: absolute;
+  z-index: 1000;
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+}
+
+.data-colors:hover .color-tooltip {
+  display: block;
 }
