--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: Rubik, sans-serif;
   color: white;
-  background-image: url("/images/noise-bg.png");
+  background-image: url("../images/noise-bg.png");
   background-size: cover;
   overflow: hidden;
 }
