--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* stylelint-disable selector-class-pattern */
 body {
   font-family: Rubik, sans-serif;
   color: white;
@@ -295,4 +296,12 @@ td {
 
 .rosepink {
   background-color: rgb(253, 165, 180);
+}
+
+.Copper {
+  background-color: #b87333;
+}
+
+.Peach {
+  background-color: #f6b092;
 }
